Fixed gap in mobile UI between room info and messages

--- a/assets/stylesheets/active-room.scss
+++ b/assets/stylesheets/active-room.scss
@@ -26,7 +26,7 @@
   .messages-wrapper {
     position: absolute;
     width: 100%;
-    top: 2.25em;
+    top: 2.7em;
     bottom: 2.5em;
     overflow-y: scroll;
   }
